src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_less(value self, value other);
value atg_less_(value self, value other);
value atg_less_equal(value self, value other);
value atg_less_equal_(value self, value other);
value atg_less_equal_scalar_out(value out, value self, value other);
value atg_less_equal_tensor(value self, value other);
value atg_less_equal_tensor_(value self, value other);
value atg_less_equal_tensor_out(value out, value self, value other);
value atg_less_scalar_out(value out, value self, value other);
value atg_less_tensor(value self, value other);
value atg_less_tensor_(value self, value other);
value atg_less_tensor_out(value out, value self, value other);
value atg_lgamma(value self);
value atg_lgamma_(value self);
value atg_lgamma_out(value out, value self);
value atg_lift(value self);
value atg_lift_fresh(value self);
value atg_lift_fresh_copy(value self);
value atg_lift_fresh_copy_out(value out, value self);
value atg_lift_out(value out, value self);
value atg_linalg_cholesky(value self, int upper);
value atg_linalg_cholesky_ex(value self, int upper, int check_errors);
value atg_linalg_cholesky_ex_l(value L, value info, value self, int upper, int check_errors);
value atg_linalg_cholesky_out(value out, value self, int upper);
value atg_linalg_cond(value self, value p);
value atg_linalg_cond_out(value out, value self, value p);
value atg_linalg_cond_p_str(value self, const char * p);
value atg_linalg_cond_p_str_out(value out, value self, const char * p);
value atg_linalg_cross(value self, value other, int64_t dim);
value atg_linalg_cross_out(value out, value self, value other, int64_t dim);
value atg_linalg_det(value A);
value atg_linalg_det_out(value out, value A);
value atg_linalg_diagonal(value A, int64_t offset, int64_t dim1, int64_t dim2);
value atg_linalg_eig(value self);
value atg_linalg_eig_out(value eigenvalues, value eigenvectors, value self);
value atg_linalg_eigh(value self, const char * UPLO);
value atg_linalg_eigh_eigvals(value eigvals, value eigvecs, value self, const char * UPLO);
value atg_linalg_eigvals(value self);
value atg_linalg_eigvals_out(value out, value self);
value atg_linalg_eigvalsh(value self, const char * UPLO);
value atg_linalg_eigvalsh_out(value out, value self, const char * UPLO);
value atg_linalg_householder_product(value input, value tau);
value atg_linalg_householder_product_out(value out, value input, value tau);
value atg_linalg_inv(value A);
value atg_linalg_inv_ex(value A, int check_errors);
value atg_linalg_inv_ex_inverse(value inverse, value info, value A, int check_errors);
value atg_linalg_inv_out(value out, value A);
value atg_linalg_ldl_factor(value self, int hermitian);
value atg_linalg_ldl_factor_ex(value self, int hermitian, int check_errors);
value atg_linalg_ldl_factor_ex_out(value LD, value pivots, value info, value self, int hermitian, int check_errors);
value atg_linalg_ldl_factor_out(value LD, value pivots, value self, int hermitian);
value atg_linalg_ldl_solve(value LD, value pivots, value B, int hermitian);
value atg_linalg_ldl_solve_out(value out, value LD, value pivots, value B, int hermitian);
value atg_linalg_lstsq(value self, value b, value rcond, value driver);
value atg_linalg_lstsq_out(value solution, value residuals, value rank, value singular_values, value self, value b, value rcond, value driver);
value atg_linalg_lu(value A, int pivot);
value atg_linalg_lu_factor(value A, int pivot);
value atg_linalg_lu_factor_ex(value A, int pivot, int check_errors);
value atg_linalg_lu_factor_ex_out(value LU, value pivots, value info, value A, int pivot, int check_errors);
value atg_linalg_lu_factor_out(value LU, value pivots, value A, int pivot);
value atg_linalg_lu_out(value P, value L, value U, value A, int pivot);
value atg_linalg_lu_solve(value LU, value pivots, value B, int left, int adjoint);
value atg_linalg_lu_solve_out(value out, value LU, value pivots, value B, int left, int adjoint);
value atg_linalg_matmul(value self, value other);
value atg_linalg_matmul_out(value out, value self, value other);
value atg_linalg_matrix_exp(value self);
value atg_linalg_matrix_exp_out(value out, value self);
value atg_linalg_matrix_power(value self, int64_t n);
value atg_linalg_matrix_power_out(value out, value self, int64_t n);
value atg_linalg_matrix_rank(value self, double tol, int hermitian);
value atg_linalg_matrix_rank_atol_rtol_float(value self, value atol, value rtol, int hermitian);
value atg_linalg_matrix_rank_atol_rtol_float_out(value out, value self, value atol, value rtol, int hermitian);
value atg_linalg_matrix_rank_atol_rtol_tensor(value input, value atol, value rtol, int hermitian);
value atg_linalg_matrix_rank_atol_rtol_tensor_out(value out, value input, value atol, value rtol, int hermitian);
value atg_linalg_matrix_rank_out(value out, value self, double tol, int hermitian);
value atg_linalg_matrix_rank_out_tol_tensor(value out, value input, value tol, int hermitian);
value atg_linalg_matrix_rank_tol_tensor(value input, value tol, int hermitian);
value atg_linalg_multi_dot(value tensors);
value atg_linalg_multi_dot_out(value out, value tensors);