src/bindings/torch_bindings_generated4.ml


  let stubs_less = foreign "atg_less" (gc_tensor @-> scalar @-> returning raw_tensor)
  let stubs_less_ = foreign "atg_less_" (gc_tensor @-> scalar @-> returning raw_tensor)

  let stubs_less_equal =
    foreign "atg_less_equal" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_less_equal_ =
    foreign "atg_less_equal_" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_less_equal_scalar_out =
    foreign
      "atg_less_equal_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_less_equal_tensor =
    foreign "atg_less_equal_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_less_equal_tensor_ =
    foreign "atg_less_equal_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_less_equal_tensor_out =
    foreign
      "atg_less_equal_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_less_scalar_out =
    foreign
      "atg_less_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_less_tensor =
    foreign "atg_less_tensor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_less_tensor_ =
    foreign "atg_less_tensor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;
end

module C1 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_less_tensor_out =
    foreign
      "atg_less_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_lgamma = foreign "atg_lgamma" (gc_tensor @-> returning raw_tensor)
  let stubs_lgamma_ = foreign "atg_lgamma_" (gc_tensor @-> returning raw_tensor)

  let stubs_lgamma_out =
    foreign "atg_lgamma_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_lift = foreign "atg_lift" (gc_tensor @-> returning raw_tensor)
  let stubs_lift_fresh = foreign "atg_lift_fresh" (gc_tensor @-> returning raw_tensor)

  let stubs_lift_fresh_copy =
    foreign "atg_lift_fresh_copy" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_lift_fresh_copy_out =
    foreign "atg_lift_fresh_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_lift_out =
    foreign "atg_lift_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linalg_cholesky =
    foreign "atg_linalg_cholesky" (gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_cholesky_ex =
    foreign
      "atg_linalg_cholesky_ex"
      (ptr raw_tensor @-> gc_tensor @-> int @-> int @-> returning void)
  ;;

  let stubs_linalg_cholesky_ex_l =
    foreign
      "atg_linalg_cholesky_ex_l"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_linalg_cholesky_out =
    foreign
      "atg_linalg_cholesky_out"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_cond =
    foreign "atg_linalg_cond" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_linalg_cond_out =
    foreign
      "atg_linalg_cond_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_linalg_cond_p_str =
    foreign "atg_linalg_cond_p_str" (gc_tensor @-> string @-> returning raw_tensor)
  ;;

  let stubs_linalg_cond_p_str_out =
    foreign
      "atg_linalg_cond_p_str_out"
      (gc_tensor @-> gc_tensor @-> string @-> returning raw_tensor)
  ;;

  let stubs_linalg_cross =
    foreign
      "atg_linalg_cross"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linalg_cross_out =
    foreign
      "atg_linalg_cross_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linalg_det = foreign "atg_linalg_det" (gc_tensor @-> returning raw_tensor)

  let stubs_linalg_det_out =
    foreign "atg_linalg_det_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linalg_diagonal =
    foreign
      "atg_linalg_diagonal"
      (gc_tensor @-> int64_t @-> int64_t @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linalg_eig =
    foreign "atg_linalg_eig" (ptr raw_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs_linalg_eig_out =
    foreign
      "atg_linalg_eig_out"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs_linalg_eigh =
    foreign "atg_linalg_eigh" (ptr raw_tensor @-> gc_tensor @-> string @-> returning void)
  ;;

  let stubs_linalg_eigh_eigvals =
    foreign
      "atg_linalg_eigh_eigvals"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> returning void)
  ;;

  let stubs_linalg_eigvals =
    foreign "atg_linalg_eigvals" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linalg_eigvals_out =
    foreign "atg_linalg_eigvals_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linalg_eigvalsh =
    foreign "atg_linalg_eigvalsh" (gc_tensor @-> string @-> returning raw_tensor)
  ;;

  let stubs_linalg_eigvalsh_out =
    foreign
      "atg_linalg_eigvalsh_out"
      (gc_tensor @-> gc_tensor @-> string @-> returning raw_tensor)
  ;;

  let stubs_linalg_householder_product =
    foreign
      "atg_linalg_householder_product"
      (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linalg_householder_product_out =
    foreign
      "atg_linalg_householder_product_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linalg_inv = foreign "atg_linalg_inv" (gc_tensor @-> returning raw_tensor)

  let stubs_linalg_inv_ex =
    foreign "atg_linalg_inv_ex" (ptr raw_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs_linalg_inv_ex_inverse =
    foreign
      "atg_linalg_inv_ex_inverse"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs_linalg_inv_out =
    foreign "atg_linalg_inv_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linalg_ldl_factor =
    foreign
      "atg_linalg_ldl_factor"
      (ptr raw_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs_linalg_ldl_factor_ex =
    foreign
      "atg_linalg_ldl_factor_ex"
      (ptr raw_tensor @-> gc_tensor @-> int @-> int @-> returning void)
  ;;

  let stubs_linalg_ldl_factor_ex_out =
    foreign
      "atg_linalg_ldl_factor_ex_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_linalg_ldl_factor_out =
    foreign
      "atg_linalg_ldl_factor_out"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs_linalg_ldl_solve =
    foreign
      "atg_linalg_ldl_solve"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_ldl_solve_out =
    foreign
      "atg_linalg_ldl_solve_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_linalg_lstsq =
    foreign
      "atg_linalg_lstsq"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> string
       @-> int
       @-> returning void)
  ;;

  let stubs_linalg_lstsq_out =
    foreign
      "atg_linalg_lstsq_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> string
       @-> int
       @-> returning void)
  ;;

  let stubs_linalg_lu =
    foreign "atg_linalg_lu" (ptr raw_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs_linalg_lu_factor =
    foreign
      "atg_linalg_lu_factor"
      (ptr raw_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs_linalg_lu_factor_ex =
    foreign
      "atg_linalg_lu_factor_ex"
      (ptr raw_tensor @-> gc_tensor @-> int @-> int @-> returning void)
  ;;

  let stubs_linalg_lu_factor_ex_out =
    foreign
      "atg_linalg_lu_factor_ex_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_linalg_lu_factor_out =
    foreign
      "atg_linalg_lu_factor_out"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning void)
  ;;

  let stubs_linalg_lu_out =
    foreign
      "atg_linalg_lu_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning void)
  ;;

  let stubs_linalg_lu_solve =
    foreign
      "atg_linalg_lu_solve"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_lu_solve_out =
    foreign
      "atg_linalg_lu_solve_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_linalg_matmul =
    foreign "atg_linalg_matmul" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linalg_matmul_out =
    foreign
      "atg_linalg_matmul_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_exp =
    foreign "atg_linalg_matrix_exp" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_exp_out =
    foreign "atg_linalg_matrix_exp_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_power =
    foreign "atg_linalg_matrix_power" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_power_out =
    foreign
      "atg_linalg_matrix_power_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_rank =
    foreign
      "atg_linalg_matrix_rank"
      (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_rank_atol_rtol_float =
    foreign
      "atg_linalg_matrix_rank_atol_rtol_float"
      (gc_tensor @-> double @-> int @-> double @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_rank_atol_rtol_float_out =
    foreign
      "atg_linalg_matrix_rank_atol_rtol_float_out"
      (gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> double
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_rank_atol_rtol_tensor =
    foreign
      "atg_linalg_matrix_rank_atol_rtol_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_rank_atol_rtol_tensor_out =
    foreign
      "atg_linalg_matrix_rank_atol_rtol_tensor_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_rank_out =
    foreign
      "atg_linalg_matrix_rank_out"
      (gc_tensor @-> gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_rank_out_tol_tensor =
    foreign
      "atg_linalg_matrix_rank_out_tol_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_matrix_rank_tol_tensor =
    foreign
      "atg_linalg_matrix_rank_tol_tensor"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_multi_dot =
    foreign "atg_linalg_multi_dot" (ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_multi_dot_out =
    foreign
      "atg_linalg_multi_dot_out"
      (gc_tensor @-> ptr gc_tensor @-> int @-> returning raw_tensor)
  ;;
